@@ -1,4 +1,4 @@
-use Test::More tests => 41;
+use Test::More tests => 42;
 
 use strict;
 use warnings;
@@ -209,3 +209,10 @@ $string = PDF::API2::Basic::PDF::String->from_pdf('(\000\000\000' . "\x5c\x5c" .
 is($string->as_pdf(),
    '<0000005C00000000>',
    q{[RT #63918] Incorrect handling of literal backslashes 2/2});
+
+
+# RT 134957
+$string = PDFStr("\x00\n\x00");
+is($string->as_pdf(),
+   '<000A00>',
+   q{\n in a string containing non-printable characters is hex-encoded});
